--- a/Animated_login/Login.html
+++ b/Animated_login/Login.html
@@ -17,7 +17,7 @@
 
                     <div class="inputbox">
                         <ion-icon name="mail-outline"></ion-icon>
-                        <input type="email" required>
+                        <input type="email" placeholder=" " required>
                         <label for="">Email</label>
                     </div>
 
