--- a/Test_folder/Test_animated_login.html
+++ b/Test_folder/Test_animated_login.html
@@ -10,16 +10,19 @@
             <div class="form-value">
                 <form action="">
                     <h2>Login</h2>
+                    
                     <div class="inputbox">
                         <ion-icon name="mail-outline"></ion-icon>
-                        <input type="email" required>
+                        <input type="email" placeholder=" " required>
                         <label for="">Email</label>
                     </div>
+
                     <div class="inputbox">
                         <ion-icon name="lock-closed-outline"></ion-icon>
                         <input type="password" required>
                         <label for="">Password</label>
                     </div>
+
                     <div class="forget">
                         <label for=""><input type="checkbox">Remember Me  <a href="#">Forget Password</a></label>
                       
