--- a/F8-shoppee/index.html
+++ b/F8-shoppee/index.html
@@ -8,13 +8,37 @@
     <link rel="stylesheet" href="./assets/css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     
     <title>Document</title>
 </head>
 <body>
-    <h1>hello</h1>
-    <h2>hello</h2>
-    <h3>hello</h3>
+
+        <div class="app">
+            <header class="header">
+                <div class="grid">
+                    <nav class="header__navbar">
+                        <ul class="header__navbar-list">
+                            <li class="header__navbar-item header__navbar-item--separate">Vào cửa hàng trên ứng dụng</li>
+                            <li class="header__navbar-item">Kết nối</li>
+                        </ul>
+    
+                        <ul class="header__navbar-list">
+                            <li class="header__navbar-item"><a href="" class="header__navbar-item-link">Thông báo</a>
+                            </li>
+                            <li class="header__navbar-item"><a href="" class="header__navbar-item-link">Trợ giúp</a>
+                            </li>
+                            <li class="header__navbar-item header__navbar-item--strong header__navbar-item--separate">Đăng kí</li>
+                            <li class="header__navbar-item header__navbar-item--strong">Đăng nhập</li>
+                        </ul>
+                    </nav>
+                </div>
+            </header>
+
+            <div class="container">
+
+            </div>
+            <footer class="footer"></footer>
+        </div>
 </body>
 </html>
