--- a/F8-shoppee/index.html
+++ b/F8-shoppee/index.html
@@ -21,19 +21,21 @@
                         <ul class="header__navbar-list">
                             <li class="header__navbar-item header__navbar-item--separate">Vào cửa hàng trên ứng dụng</li>
                             <li class="header__navbar-item">
-                                Kết nối
-                                <a href="" class="header__navbar-icon-link"><i class="fa-brands fa-facebook"></i></a>
-                                <a href="" class="header__navbar-icon-link"><i class="fa-brands fa-instagram"></i></a>
+                                <span class="header__navbar-title--no-poiter">Kết nối</span>
+                                <a href="" class="header__navbar-icon-link">
+                                    <i class="header__navbar-icon fa-brands fa-facebook"></i></a>
+                                <a href="" class="header__navbar-icon-link">
+                                    <i class="header__navbar-icon fa-brands fa-instagram"></i></a>
                             </li>
                         </ul>
     
                         <ul class="header__navbar-list">
                             <li class="header__navbar-item"><a href="" class="header__navbar-item-link">
-                                <i class="fa-regular fa-bell"></i>
+                                <i class="header__navbar-icon fa-regular fa-bell"></i>
                                 Thông báo </a>
                             </li>
                             <li class="header__navbar-item"><a href="" class="header__navbar-item-link">
-                                <i class="fa-regular fa-circle-question"></i>
+                                <i class="header__navbar-icon fa-regular fa-circle-question"></i>
                                 Trợ giúp</a>
                             </li>
                             <li class="header__navbar-item header__navbar-item--strong header__navbar-item--separate">Đăng kí</li>
