--- a/F8-shoppee/index.html
+++ b/F8-shoppee/index.html
@@ -19,7 +19,22 @@
                 <div class="grid">
                     <nav class="header__navbar">
                         <ul class="header__navbar-list">
-                            <li class="header__navbar-item header__navbar-item--separate">Vào cửa hàng trên ứng dụng</li>
+                            <li class="header__navbar-item header__navbar-item--has-qr header__navbar-item--separate">
+                                Vào cửa hàng trên ứng dụng androi or apple
+                                <!-- Header QR code  -->
+                                <div class="header__qr">
+                                    <img src="./assets/img/QR.png" alt="QR CODE" class="header__qr-img">
+                                    <div class="header__qr_apps">
+                                        <a href="" class="header__qr-link">
+                                            <img src="./assets/img/gogle.png" alt="Goole Play" class="header__qr-download-img">
+                                        </a>
+                                        <a href="" class="header__qr-link">
+                                            <img src="./assets/img/apple.png" alt="Apple store" class="header__qr-download-img">
+                                        </a>
+                                        
+                                    </div>
+                                </div>
+                            </li>
                             <li class="header__navbar-item">
                                 <span class="header__navbar-title--no-poiter">Kết nối</span>
                                 <a href="" class="header__navbar-icon-link">
