--- a/F8-shoppee/index.html
+++ b/F8-shoppee/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./assets/css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/font/fontawesome-free-6.4.2-web/css/all.min.css">
     <title>Document</title>
 </head>
@@ -20,7 +20,7 @@
                     <nav class="header__navbar">
                         <ul class="header__navbar-list">
                             <li class="header__navbar-item header__navbar-item--has-qr header__navbar-item--separate">
-                                Vào cửa hàng trên ứng dụng androi or apple
+                                Vào cửa hàng trên ứng dụng phone
                                 <!-- Header QR code  -->
                                 <div class="header__qr">
                                     <img src="./assets/img/QR.png" alt="QR CODE" class="header__qr-img">
@@ -48,8 +48,50 @@
                             <li class="header__navbar-item"><a href="" class="header__navbar-item-link">
                                 <i class="header__navbar-icon fa-regular fa-bell"></i>
                                 Thông báo </a>
+                                <div class="header__notify">
+
+                                    <header class="header__notify-header">
+                                        <h3>Thông Báo Mới Nhận</h3>
+                                    </header>
+                                    <ul class="header__notify-list">
+                                        <li class="header__notify-item header__notify-item--viewed">
+                                            <a href="" class="header__notify-link">
+                                                <img src="https://images.pexels.com/photos/90946/pexels-photo-90946.jpeg?cs=srgb&dl=pexels-math-90946.jpg&fm=jpg" alt="" class="header__notify-img">
+                                                <div class="header__notify-info">
+                                                    <span class="header__notify-name">Mỹ Phẩm Cam chính hãng</span>
+                                                    <span class="header__notify-description">Mô tả sản phẩm chính hãng</span>
+                                                </div>
+
+                                            </a>
+                                        </li>
+                                        <li class="header__notify-item header__notify-item--viewed">
+                                            <a href="" class="header__notify-link">
+                                                <img src="https://images.pexels.com/photos/90946/pexels-photo-90946.jpeg?cs=srgb&dl=pexels-math-90946.jpg&fm=jpg" alt="" class="header__notify-img">
+                                                <div class="header__notify-info">
+                                                    <span class="header__notify-name">Mỹ Phẩm Cam chính hãng</span>
+                                                    <span class="header__notify-description">Mô tả sản phẩm chính hãng</span>
+                                                </div>
+
+                                            </a>
+                                        </li>
+                                        <li class="header__notify-item">
+                                            <a href="" class="header__notify-link">
+                                                <img src="https://images.pexels.com/photos/90946/pexels-photo-90946.jpeg?cs=srgb&dl=pexels-math-90946.jpg&fm=jpg" alt="" class="header__notify-img">
+                                                <div class="header__notify-info">
+                                                    <span class="header__notify-name">Mỹ Phẩm Cam chính hãng</span>
+                                                    <span class="header__notify-description">Mô tả sản phẩm chính hãng</span>
+                                                </div>
+                                            </a>
+                                        </li>
+                                    </ul>
+                                    <div class="header__notify-footer">
+                                        <a href="" class="header__notify-footer-btn">Xem tất cả</a>
+
+                                    </div>
+                                </div>
                             </li>
-                            <li class="header__navbar-item"><a href="" class="header__navbar-item-link">
+                            <li class="header__navbar-item">
+                                <a href="" class="header__navbar-item-link">
                                 <i class="header__navbar-icon fa-regular fa-circle-question"></i>
                                 Trợ giúp</a>
                             </li>
