--- a/F8-shoppee/index.html
+++ b/F8-shoppee/index.html
@@ -45,7 +45,8 @@
                         </ul>
     
                         <ul class="header__navbar-list">
-                            <li class="header__navbar-item"><a href="" class="header__navbar-item-link">
+                            <li class="header__navbar-item header__navbar-item-has-notify">
+                                <a href="" class="header__navbar-item-link">
                                 <i class="header__navbar-icon fa-regular fa-bell"></i>
                                 Thông báo </a>
                                 <div class="header__notify">
