--- a/F8-shoppee/index.html
+++ b/F8-shoppee/index.html
@@ -49,7 +49,7 @@
                                 <a href="" class="header__navbar-item-link">
                                 <i class="header__navbar-icon fa-regular fa-bell"></i>
                                 Thông báo </a>
-                                <div class="header__notify">
+                                <div class="header__notify"> 
 
                                     <header class="header__notify-header">
                                         <h3>Thông Báo Mới Nhận</h3>
@@ -106,7 +106,19 @@
             <div class="container">
 
             </div>
-            <footer class="footer"></footer>
+            <footer class="footer">
+
+            </footer>
+            <!-- MODAL LAYOUT -->
+            <div class="modal">
+                <div class="modal__overlay"></div>
+
+                <div class="modal__body">
+                    <div class="modal__inner">
+                         
+                    </div>
+                </div>
+            </div>
         </div>
 </body>
 </html>
