--- a/F8-shoppee/index.html
+++ b/F8-shoppee/index.html
@@ -111,10 +111,10 @@
             </footer>
         </div>
             <!-- MODAL LAYOUT -->
-            <!-- <div class="modal">
+            <div class="modal">
                 <div class="modal__overlay"></div>
 
-                <div class="modal__body"> -->
+                <div class="modal__body">
 
                         <!-- Register form -->
                          <!-- <div class="auth-form">
@@ -171,7 +171,7 @@
                          </div> -->
                          
                         <!-- Login form -->
-                        <!-- <div class="auth-form">
+                        <div class="auth-form">
                             <div class="auth-form__container">
                                 <div class="auth-form__header">
                                     <h3 class="auth-form__heading">Đăng nhập</h3>
@@ -219,9 +219,9 @@
                                     </span>
                                 </a>
                             </div>
-                         </div> -->
-                <!-- </div>
-            </div> -->
+                         </div>
+                </div>
+            </div>
         
 </body>
 </html>
