--- a/F8-shoppee/index.html
+++ b/F8-shoppee/index.html
@@ -110,7 +110,9 @@
                              </svg>
                         </div>
                         <div class="header__search">
-                            <input type="text" class="header__search-input" placeholder="Nhập để tìm kiếm sản phẩm">
+                            <div class="header__search-input-wrap">
+                                <input type="text" class="header__search-input" placeholder="Nhập để tìm kiếm sản phẩm">
+                            </div>
                             <div class="header__search-select">
                                 <span class="header__search-select-label">Trong shop</span>
                                 <i class="header__search-select-icon fa-solid fa-angle-down"></i>
